# chirpy

./: .coverage  .env.example  .gitignore  CLAUDE.md  CLAUDE_TEMPLATE.md  ENHANCED_WORKFLOW.md  ISSUE_5_COMPLETION_EVIDENCE.md  Makefile  ORM_MIGRATION_STRATEGY.md  README.md  base_ui.py  chirpy.py  cli.py  config.py  content_fetcher.py  database_service.py  db_migration.py  db_models.py  db_utils.py  error_handling.py  health_check.py  interactive_ui.py  interactive_ui_safe.py  pyproject.toml  requirements.txt  run_tests.py  session_manager.py  test_minimal.py  test_read_system.py  test_sqlmodel_poc.py  tts_service.py
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_content_fetcher.py  test_database.py  test_logger.py  test_tts_cache_cleanup.py  test_tts_service.py
tests/integration/: test_complete_workflow.py
tests/unit/: test_chirpy.py  test_cli.py  test_config.py  test_config_simple.py  test_content_fetcher.py  test_db_utils.py  test_db_utils_simple.py
