[project]
name = "chirpy"
version = "0.1.0"
description = "MVP RSS reader with text-to-speech functionality"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "yast" }
]
requires-python = ">=3.13"
dependencies = [
    "pyttsx3>=2.99",
    "openai>=2.32.0",
    "requests>=2.33.1",
    "beautifulsoup4>=4.14.3",
    "python-dotenv>=1.2.2",
    "langdetect>=1.0.9",
    "rich>=15.0.0",
    "sqlmodel>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
# SQLAlchemy/SQLModel specific configurations
plugins = ["sqlalchemy.ext.mypy.plugin"]
# Ignore complex SQLAlchemy column attribute issues in POC files
[[tool.mypy.overrides]]
module = ["db_models", "database_service"]
disable_error_code = ["attr-defined", "union-attr", "arg-type"]
# Ignore interactive UI fallback import issues
[[tool.mypy.overrides]]
module = ["interactive_ui", "interactive_ui_safe", "chirpy"]
disable_error_code = ["assignment"]
# Less strict checking for test files
[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = ["no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=80",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
    "types-keyboard>=0.13.2.20260408",
    "types-requests>=2.33.0.20260408",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "responses>=0.26.0",
]
test = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "pytest-asyncio>=1.3.0",
    "responses>=0.26.0",
]
